<resources>
  <string name="app_name">BeeDriverTrack</string>
  <string name="app_logo">Bee Driver Simple Version</string>
  <string name="shortcut_start">Start service</string>
  <string name="shortcut_stop">Stop service</string>
  <string name="shortcut_sos">Send SOS</string>
  <string name="channel_default">Primary Channel</string>
  <string name="settings_id_title">Device identifier</string>
  <string name="settings_url_title">Server URL</string>
  <string name="settings_url_summary">Tracking server URL</string>
  <string name="settings_interval_title">Frequency</string>
  <string name="settings_interval_summary">Reporting interval in seconds</string>
  <string name="settings_distance_title">Distance</string>
  <string name="settings_distance_summary">Reporting distance in meters</string>
  <string name="settings_angle_title">Angle</string>
  <string name="settings_angle_summary">Reporting angle in degrees</string>
  <string name="settings_status_title">Service status</string>
  <string name="settings_status_off">Start</string>
  <string name="settings_status_on">Stop</string>
  <string name="settings_status_off_summary">Service stopped</string>
  <string name="settings_status_on_summary">Service running</string>
  <string name="settings_accuracy_title">Location accuracy</string>
  <string name="settings_accuracy_summary">Desired location accuracy</string>
  <string name="settings_accuracy_high">High</string>
  <string name="settings_accuracy_medium">Medium</string>
  <string name="settings_accuracy_low">Low</string>
  <string name="settings_foreground_title">Foreground service</string>
  <string name="settings_foreground_summary">Increase service priority</string>
  <string name="menu_status">Status</string>
  <string name="menu_about">About</string>
  <string name="menu_shortcuts">Add shortcuts</string>
  <string name="menu_clear">Clear</string>
  <string name="about_description">Real time GPS tracker for Android devices. Compatible with Bee Firebase Server and other tracking systems.</string>
  <string name="about_license">This application is free and open source, source code is licensed under Apache License Version 2.0 and available on GitHub.</string>
  <string name="about_web">For more information visit ....  Bee </string>
  <string name="status_service_create">Service started</string>
  <string name="status_service_destroy">Service stopped</string>
  <string name="status_send_success">Send successfully</string>
  <string name="status_send_fail">Send failed</string>
  <string name="status_location_update">Location update</string>
  <string name="status_network_online">Network online</string>
  <string name="status_network_offline">Network offline</string>
  <string name="hidden_app_name">Device Settings</string>
  <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (BeeCode).</string>
  <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>
  <string name="enter_no">Enter your mobile number</string>
  <string name="phone_hint">Enter your mobile number</string>
  <string name="get_moving">Get moving with Bee Service</string>
  <string name="transition_arrow">transition_arrow</string>
  <string name="transition_tvMoving">transition_tvMoving</string>
  <string name="transition_ivFlag">transition_ivFlag</string>
  <string name="transition_tvCode">transition_tvCode</string>
  <string name="transition_tvPhoneNo">transition_tvPhoneNo</string>
  <string name="transition_llPhone">transition_llPhone</string>
  <string name="welcome_back">Welcome back, sign in to continue</string>
  <string name="nav_home">Home</string>
  <string name="nav_profil">Profil</string>
  <string name="nav_history">History</string>
  <string name="nav_notifications">Notifications/Promo</string>
  <string name="nav_share">Share</string>
  <string name="nav_rate">Rate this App</string>
  <string name="nav_settings">Adv. Settings</string>
  <string name="nav_chat">Zone Chat</string>
  <string name="nav_about">About Us</string>
  <string name="nav_sign_out">logout</string>
  <string name="share_intent_title">Share Whatsapp</string>
  <string name="share_whatsapp_not_instaled">whatsapp not installed</string>
  <string name="pick_contacts">Pick contact(s)</string>
  <string name="picked_contacts">Picked contact(s)</string>
  <string name="permission_denied">Permission denied</string>
  <string name="permission_denied_contacts">The contact picker won\'t work without this permission. Are you sure you want to deny this permission?</string>
  <string name="permission_deny">Deny</string>
  <string name="permission_retry">Re-try</string>
  <string name="light_theme">Light Theme</string>
  <string name="dark_theme">Dark Theme</string>
  <string name="action_add_favourite">Add to Favourites</string>
  <string name="action_play_next">delete</string>
  <string name="backdrop_title">xxTTxx</string>
  <string name="backdrop_subtitle">subtitle</string>
  <string name="action_settings">Settings</string>
  <string name="promo_titel">Bee~#> Promotions</string>
  <string name="delete">DELETE</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="openDrawer">open_drawer</string>
  <string name="closeDrawer">close_drawer</string>
  <string-array name="nav_item_activity_titles">
    <item>Home</item>
    <item>Profil</item>
    <item>History</item>
    <item>Notifications</item>
    <item>Share</item>
    <item>Zone Chat</item>
  </string-array>
  <string name="activity_title_about_us">Über uns</string>
  <string name="activity_title_privacy_policy">Privacy Policy</string>
  <string name="action_clear_all">Clear All</string>
  <string name="action_logout">Logout</string>
  <string name="action_mark_all_read">Mark All as Read</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="title_activity_details">Contact Details</string>
  <string name="transition_name_name">transition:NAME</string>
  <string name="transition_name_circle">transition:CIRCLE</string>
  <string name="transition_name_phone">transition:PHONE</string>
  <string name="about">About</string>
  <string name="login_success">login success</string>
  <string name="login">LOGIN</string>
  <string name="Username">Email</string>
  <string name="Password">Password</string>
  <string name="forgot_your_password">Forgot your password ?</string>
  <string name="go">GO</string>
  <string name="repeat_password">Repeat Password</string>
  <string name="next">NEXT</string>
  <string name="register">REGISTER</string>
  <string name="hint_username">Enter a new username</string>
  <string name="hint_email_reset">Enter your email</string>
  <string name="enter_group_name">Enter group name</string>
  <string name="sign_out">Sign Out</string>
  <string name="hint_phone_number">Enter Phone Number</string>
  <string name="hint_verification_code">Verification Code</string>
  <string name="start_phone_auth">Start</string>
  <string name="verify_phone_auth">Verify</string>
  <string name="resend_phone_auth">Resend</string>
  <string name="news">News and Offers</string>
  <string name="app_intro_text">Welcome to Bee Wallet Mananger -Before starting, please take some time to read through our terms of service.</string>
  <string name="app_intro_title">Bee Wallet Manager</string>
  <string name="app_intro_please_agree">Please read and agree to the terms of service before proceeding</string>
  <string name="app_intro_iagree">I agree to terms of service</string>
  <string name="fragment_send_ether_amount">Amount</string>
  <string name="fragment_send_cheaper">Cheaper</string>
  <string name="fragment_send_faster">Faster</string>
  <string name="fragment_send_total">Total</string>
  <string name="fragment_send_send_button">Send</string>
  <string name="fragment_recipient_hint_address">Address</string>
  <string name="fragment_recipient_continue">Continue</string>
  <string name="fragment_detail_add_sharing">Address Sharing</string>
  <string name="fragment_detail_share_button">Share</string>
  <string name="walletgen_title">Generate Wallet</string>
  <string name="request_ether_title">Request </string>
  <string name="qr_scan_title">QR Address</string>
  <string name="activity_send_title">Transaction</string>
  <string name="last_24_hours">Last 24 Hours</string>
  <string name="last_7_days">Last 7 Days</string>
  <string name="last_30_days">Last 30 Days</string>
  <string name="last_year">Last Year</string>
  <string name="err_no_con">No internet connection</string>
  <string name="wallet_menu_title">Wallet Settings</string>
  <string name="wallet_menu_changename">Change Wallet Name</string>
  <string name="wallet_menu_copyadd">Address to Clipboard</string>
  <string name="wallet_menu_export">Export Wallet</string>
  <string name="wallet_menu_delete">Delete Wallet</string>
  <string name="wallet_suc_exported">Wallet successfully exported</string>
  <string name="wallet_no_permission">Please grant write permission to export wallets</string>
  <string name="wallet_one_at_a_time">Not So Fast</string>
  <string name="wallet_one_at_a_time_text">We are currently generating a wallet for you, you can see the progress in your notification bar. Don\'t worry, we will notify you as soon as your wallet generation is finished :-) If you really wish to generate another one please wait for the current wallet to be completed first.</string>
  <string name="button_ok">OK</string>
  <string name="wallet_removal_title">ATTENTION: Wallet Removal</string>
  <string name="wallet_removal_sure">Are you sure you want to delete your watch only wallet?</string>
  <string name="wallet_removal_privkey">! THIS IS A WALLET WITH A PRIVATE KEY ! IF YOU HAVE NO BACKUP AND CONTINUE ALL YOUR Reserve ON THAT WALLET WILL BE LOST FOR EVER! ARE YOU SURE YOU WANT TO PROCEED? WALLET ADDRESS:</string>
  <string name="wallet_removal_last_warning">ARE YOU SURE? WALLET AND ALL COINS / TOKEN ON IT ARE GOING TO GET PERMANENTLY REMOVED. THIS IS THE LAST WARNING FOR WALLET:</string>
  <string name="button_yes">YES</string>
  <string name="button_no">NO</string>
  <string name="name_your_wallet">Name Your Wallet</string>
  <string name="button_cancel">Cancel</string>
  <string name="name_other_address">Name Other Address</string>
  <string name="trans_menu_title">Transaction Settings</string>
  <string name="trans_menu_changename">Change Address Name</string>
  <string name="trans_menu_viewreceiver">View Receiver Address</string>
  <string name="trans_menu_openinb">Open in Browser</string>
  <string name="trans_no_trans_found">No transactions found for this address.</string>
  <string name="err_send_not_enough_ether">Not enough Money on that Address</string>
  <string name="err_send_invalidamount">Invalid Amount</string>
  <string name="err_send_noreceiver">No receiver specified</string>
  <string name="err_send_noamount">No amount specified</string>
  <string name="name_your_address">Name Your Address</string>
  <string name="name_this_address">Name This Address</string>
  <string name="addressbook_menu_title">Addressbook Settings</string>
  <string name="addressbook_menu_remove">Remove</string>
  <string name="import_title">Import Wallet</string>
  <string name="import_button">Import</string>
  <string name="main_grant_permission_export">Please grant write permission to export Wallets</string>
  <string name="main_grant_permission_import">Please grant read permission to import Wallets</string>
  <string name="dialog_watch_only_title">Lookup Address</string>
  <string name="dialog_importing_wallets_title">Importing Wallets?</string>
  <string name="dialog_importing_wallets_text">We have detected %1$d new wallet%2$s in our Bee Wallet folder. Would you like to import: %3$s</string>
  <string name="you_ordered">characteristic of the place</string>
</resources>