<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivUberLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/uber_main" />

        <LinearLayout
            android:id="@+id/llphone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:transitionName="@string/transition_llPhone">

            <TextView
                android:id="@+id/tvMoving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:text="@string/get_moving"
                android:textColor="#262626"
                android:textSize="24sp" />


            <LinearLayout
                android:id="@+id/llInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp">



                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/continuebut"
                    android:layout_width="200dp"
                    android:text="Connect with phone"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:textColor="#0E0E0E"
                    android:textSize="16sp"
                    android:transitionName="@string/transition_tvCode" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/llInfo"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#EEEEEE" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:padding="15dp"
        android:src="@drawable/ic_arrow_back"
        android:transitionName="@string/transition_arrow" />

</FrameLayout>